# mac-proxy-cache

./: .gitignore  Cargo.toml  README.md
app/: Package.swift
app/MacProxyCache/: MacProxyCacheApp.swift  MenuBarView.swift  MonitorWindow.swift  ProxyService.swift  StatsPoller.swift
crates/proxy-cli/: Cargo.toml
crates/proxy-cli/src/: main.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: config.rs  error.rs  lib.rs
crates/proxy-core/src/cache/: eviction.rs  index.rs  key.rs  mod.rs  policy.rs  range.rs  store.rs
crates/proxy-core/src/dashboard/: api.rs  server.rs
crates/proxy-core/src/macos/: cert_install.rs  mod.rs  system_proxy.rs
crates/proxy-core/src/proxy/: engine.rs  handler.rs  mod.rs  tls.rs
scripts/: build.sh  dev.sh  restart.sh  setup.sh  start-menubar.sh  start.sh
