[package]
name = "proxy-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mac-proxy-cache"
path = "src/main.rs"

[dependencies]
proxy-core = { path = "../proxy-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
