[package]
name = "proxy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hudsucker = { version = "0.24", default-features = false, features = ["rcgen-ca", "rustls-client"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "6"
sha2 = "0.10"
hex = "0.4"
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
http-cache-semantics = { version = "2", features = ["serde", "reqwest"] }
http = "1"
url = "2"
bytes = "1"
http-body-util = "0.1"
axum = "0.8"
tokio-stream = "0.1"
flate2 = "1"
brotli = "8"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
